[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["dustyposa <zmzposa@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = "^0.45.0"
uvicorn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "4.6.8"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
