[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["dustyposa <zmzposa@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = "^0.45.0"
uvicorn = "^0.11.1"
pydantic = {extras = ["email"], version = "^1.3"}
python-multipart = "^0.0.5"
pyjwt = "^1.7.1"
passlib = "^1.7.2"
graphene = "^2.1.8"

[tool.poetry.dev-dependencies]
pytest = "4.6.8"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

